--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
